Contact form wrapping up. A bug remains with the session on submitting the form, but this is the 99% done version.

--- a/themes/default/stylesheets/styles.css
+++ b/themes/default/stylesheets/styles.css
@@ -128,3 +128,15 @@ a:hover {
 .breadcrumbs {
 	font-size: 80%;
 }
+
+#contact-form dd {
+	margin-bottom: 10px;
+}
+
+#contact-form input {
+	font-size: 120%;
+}
+
+#contact-form textarea {
+	font-size: 120%;
+}
